--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,27 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+        <ion-toolbar>
+            <ion-title center text-center>Contacto</ion-title>
+            <ion-buttons end>
+              <button ion-button icon-only color="royal" (click) = "clickAgregar()">
+                <ion-icon name="add"></ion-icon>
+              </button>
+            </ion-buttons>
+          </ion-toolbar>
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+  <ion-list>
+    <ion-item  *ngFor="let a of Contactos" (click) = "Mostrar(a)">
+      <ion-avatar item-start>
+        <img src = "../assets/Avatar01.png">
+      </ion-avatar>
+      <h2>{{a.nombre}}</h2>
+      <p>{{a.telefono}}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
